--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,98 @@
 @font-face {
-    font-family: 'Cytone';
-    src: url("/fonts/Cytone-Regular.ttf") format("truetype");
-  }
+  font-family: 'Cytone';
+  src: url("/fonts/Cytone-Regular.ttf") format("truetype");
+}
 
-  /* header */
+@font-face {
+  font-family: 'Fairy';
+  src: url("/fonts/Fairymuffinroundpop.ttf") format("truetype");
+}
 
-  #header {
-    background-repeat: no-repeat;
-    background-size: 9%;
-    width: auto;
-    text-shadow: 6px 6px #0091ff;
-  }
-  
-  
-  
-  /* header text */
-  
-  #header,
-  .text-container {
-    display: flex;
-    font-family: 'Cytone';
-    color: white;
-    font-size: calc(16px + 2.5vw);
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-    width: auto;
-    scale: 90%;
-  
-  }
+/* header */
 
-  body {
-    background-color: #0000FF; /* Default bright mode color */
-    transition: background-color 0.3s ease;
-  }
-  .night-mode {
-    background-color: black; /* Night mode color */
-  }
-  .btn {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    width: 40px;
-    height: 40px;
-    border: none;
-    cursor: pointer;
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background-size: contain; /* Adjust to 'cover' if necessary */
-  }
+#header {
+  background-repeat: no-repeat;
+  background-size: 9%;
+  width: auto;
+  text-shadow: 4px 4px #0615e2;
+}
+
+
+/* header text */
+
+#header,
+.text-container {
+  display: flex;
+  font-family: 'Cytone';
+  color: white;
+  font-size: calc(16px + 2.5vw);
+  text-align: center;
+  margin: 0 auto;
+  width: auto;
+  scale: 90%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3px;
+}
+
+/* Font styles for the navigation links */
+#header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav.left-nav,
+nav.right-nav {
+  display: flex;
+  align-items: center;
+  font-size: 40px;
+  margin-top: 20px;
+}
+
+nav.left-nav a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: white;
+  font-family: 'Fairy';
+  margin: 0px 65px;
+}
+
+nav.right-nav a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: white;
+  font-family: 'Fairy';
+  margin: 0px 65px;
+}
+
+body {
+  background-color: #0000FF;
+  /* Default bright mode color */
+  transition: background-color 0.3s ease;
+}
+
+.night-mode {
+  background-color: black;
+  /* Night mode color */
+}
+
+.btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 /* Start https://www.cursors-4u.com */
 * {
-    cursor: url(https://cur.cursors-4u.net/cursors/cur-1/cur25.ani), url(https://cur.cursors-4u.net/cursors/cur-1/cur25.png), auto !important;
-  }
-  
-  /* End https://www.cursors-4u.com */
+  cursor: url(https://cur.cursors-4u.net/cursors/cur-1/cur25.ani), url(https://cur.cursors-4u.net/cursors/cur-1/cur25.png), auto !important;
+}
 
-  
+/* End https://www.cursors-4u.com */
