--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,47 @@
 }
 
 @font-face {
-  font-family: 'Large';
-  src: url("/fonts/Large.ttf") format("truetype");
+  font-family: 'EPSON-KYOKASHO';
+  src: url('/fonts/EPSON-KYOKASHO.eot');
+  src: url('/fonts/EPSON-KYOKASHO.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/EPSON-KYOKASHO.woff2') format('woff2'),
+      url('/fonts/EPSON-KYOKASHO.woff') format('woff'),
+      url('/fonts/EPSON-KYOKASHO.ttf') format('truetype'),
+      url('/fonts/EPSON-KYOKASHO.svg#EPSON-KYOKASHO') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'Medium';
-  src: url("/fonts/Medium.ttf") format("truetype");
+  font-family: 'EPSON-KAISHO';
+  src: url('/fonts/EPSON-KAISHO.eot');
+  src: url('/fonts/EPSON-KAISHO.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/EPSON-KAISHO.woff2') format('woff2'),
+      url('/fonts/EPSON-KAISHO.woff') format('woff'),
+      url('/fonts/EPSON-KAISHO.ttf') format('truetype'),
+      url('/fonts/EPSON-KAISHO.svg#EPSON-KAISHO') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'Thin';
-  src: url("/fonts/Thin.ttf") format("truetype");
+  font-family: 'EPSON-FUTO-MINCHO';
+  src: url('/fonts/EPSON-FUTO-MINCHO.eot');
+  src: url('/fonts/EPSON-FUTO-MINCHO.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/EPSON-FUTO-MINCHO.woff2') format('woff2'),
+      url('/fonts/EPSON-FUTO-MINCHO.woff') format('woff'),
+      url('/fonts/EPSON-FUTO-MINCHO.ttf') format('truetype'),
+      url('/fonts/EPSON-FUTO-MINCHO.svg#EPSON-FUTO-MINCHO') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
+
+
+
+
 
 /* Header Styles */
 #header {
@@ -93,6 +121,28 @@ body {
   background-color: #001aff;
   /* Default bright mode color */
   transition: background-color 0.3s ease;
+}
+
+h1 {
+  display: flex;
+  align-items: center;
+  font-size: 3.5vw; 
+  margin-top: 2vw; 
+  margin-right: 2.5vw;
+  margin: 1.25vw 2vw; 
+  text-decoration: none;
+  color: white;
+  font-family: 'EPSON-FUTO-MINCHO';
+}
+
+p {
+  display: flex;
+  align-items: center;
+  font-size: 1.3vw; 
+  margin: 0vw 2vw; 
+  text-decoration: none;
+  color: white;
+  font-family: 'EPSON-KAISHO';
 }
 
 /* Night Mode Styles */
